--- a/css/common.css
+++ b/css/common.css
@@ -5,7 +5,7 @@ body {
   margin: 0;
   padding: 0;
   font-size: 14px;
-  background-color: #203b62;
+  background-color: #0a192f;
 }
 
 h1 {
@@ -231,6 +231,7 @@ header ol li a h6 {
 }
 .full-wrap .article-box.pf-exprience .exprience-list .list-nav ul li {
   padding: 1rem 2rem;
+  font-size: 1rem;
 }
 .full-wrap .article-box.pf-exprience .exprience-list .list-nav ul li.active {
   background-color: rgba(205, 208, 213, 0.12);
@@ -258,6 +259,6 @@ header ol li a h6 {
 }
 .full-wrap .article-box .article-title span {
   color: #60f6d3;
-  font-size: 1.7rem;
+  font-size: 2rem;
   font-weight: normal;
 }/*# sourceMappingURL=common.css.map */
