--- a/css/common.scss
+++ b/css/common.scss
@@ -5,8 +5,8 @@ body {
     margin: 0;
     padding: 0;
     font-size: 14px;
-    // background-color: #0a192f;
-    background-color: #203b62;
+    background-color: #0a192f;
+    // background-color: #203b62;
 }
 
 @for $i from 1 through 6 {
@@ -162,6 +162,7 @@ header {
 
                         li {
                             padding: 1rem 2rem;
+                            font-size: 1rem;
 
                             &.active {
                                 background-color: rgb(205 208 213 / 12%);
@@ -197,7 +198,7 @@ header {
 
             span {
                 color: #60f6d3;
-                font-size: 1.7rem;
+                font-size: 2rem;
                 font-weight: normal;
             }
         }
