--- a/css/common.css
+++ b/css/common.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 html,
 body {
   width: 100%;
@@ -40,6 +41,7 @@ h6 {
 
 a {
   text-decoration: none !important;
+  color: inherit !important;
 }
 
 ol,
@@ -75,6 +77,10 @@ header ol li a h6 {
 #wrap {
   width: 100%;
   height: 100%;
+}
+
+.hidden {
+  display: none !important;
 }
 
 .fs-10 {
@@ -251,6 +257,33 @@ header ol li a h6 {
 }
 .full-wrap .article-box.pf-exprience .exprience-detail .company-detail {
   margin-bottom: 2rem;
+}
+.full-wrap .article-box.pf-exprience .exprience-detail .accordion {
+  margin: 1.3rem 0;
+  width: 100%;
+  font-size: 1rem;
+  transition: 0.4s;
+}
+.full-wrap .article-box.pf-exprience .exprience-detail .active,
+.full-wrap .article-box.pf-exprience .exprience-detail .accordion:hover {
+  color: #fff;
+}
+.full-wrap .article-box.pf-exprience .exprience-detail .accordion:before {
+  content: "+";
+  color: #ccd6f6;
+}
+.full-wrap .article-box.pf-exprience .exprience-detail .active:before {
+  content: "−";
+}
+.full-wrap .article-box.pf-exprience .exprience-detail .panel {
+  padding: 0 1rem;
+  background-color: rgba(255, 0, 88, 0.11);
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+}
+.full-wrap .article-box.pf-exprience .exprience-detail .panel div {
+  padding: 0.5rem 0;
 }
 .full-wrap .article-box .article-title {
   color: #c4cae0;
