--- a/css/common.scss
+++ b/css/common.scss
@@ -18,6 +18,7 @@ body {
 
 a {
     text-decoration: none !important;
+    color: inherit!important;
 }
 
 ol,
@@ -60,6 +61,10 @@ header {
 #wrap {
     width: 100%;
     height: 100%;
+}
+
+.hidden {
+    display: none!important;
 }
 
 // 폰트 사이즈
@@ -188,6 +193,48 @@ header {
                 .company-detail {
                     margin-bottom: 2rem;
                 }
+                
+                // .project-list {
+                //     display: grid;
+                //     grid-template-columns: repeat(2, 1fr);
+                //     gap: 0.5rem;
+                // }
+
+                // 아코디언
+                .accordion {
+                    margin: 1.3rem 0;
+                    width: 100%;
+                    font-size: 1rem;
+                    transition: 0.4s;
+                }
+                
+                .active,
+                .accordion:hover {
+                    color: #fff;
+                    // font-weight: bold;
+                }
+                
+                .accordion:before {
+                    content: '\002B';
+                    color: #ccd6f6;
+                }
+                
+                .active:before {
+                    content: "\2212";
+                }
+
+                .panel {
+                    padding: 0 1rem;
+                    background-color: rgb(255 0 88 / 11%);
+                    max-height: 0;
+                    overflow: hidden;
+                    transition: max-height 0.2s ease-out;
+
+                    div {
+                        padding: 0.5rem 0;
+                    }
+                }
+                // 아코디언끝
             }
         }
 
