--- a/css/common.scss
+++ b/css/common.scss
@@ -5,7 +5,7 @@ body {
     margin: 0;
     padding: 0;
     font-size: 14px;
-    background-color: #0a192f;
+    // background-color: #0a192f;
     // background-color: #203b62;
 }
 
@@ -31,27 +31,52 @@ li {
 
 header {
     position: absolute;
-    height: 5rem;
-    padding: 0 5%;
+    height: 6rem;
+    padding: 0 2%;
     box-sizing: border-box;
     z-index: 999;
-    background-color: rgba(10, 25, 47, 0.7);
+    background-color: rgb(255 255 255 / 20%);
+    border-bottom: 1px solid #ccc;
+    backdrop-filter: blur(5px);
+    // background-color: rgba(10, 25, 47, 0.7);
+    
+    .logo-link {
+        font-size: 2.5rem;
+    }
 
     ol {
         li {
+            margin-right: 2rem;
+            
             a {
                 display: flex;
-                align-items: baseline;
+                flex-flow: column;
                 color: #60f6d3;
-                padding: 0 1rem;
+                // padding: 0 1rem;
 
                 span {
-                    margin-right: 0.5rem;
-                    color: #60f6d3;
+                    // margin-right: 0.5rem;
+                    font-weight: lighter;
                 }
 
-                h6 {
-                    color: #ccd6f6;
+                h5 {
+                    font-weight: 400;
+
+                    &:after {
+                        position: absolute;
+                        left: 0;
+                        bottom: -2px;
+                        display: block;
+                        width: 0;
+                        height: 1px;
+                        background-color: #000;
+                        transition: width .4s;
+                        content: "";
+                    }
+
+                    .active .header_nav_link .header_nav_text:after {
+                        width: 100%;
+                    }
                 }
             }
         }
@@ -117,7 +142,7 @@ header {
     width: 50%;
 
     .article-box {
-        &.pf-welcome {
+        &.pf-main {
             width: 100%;
             height: 100%;
             display: flex;
