--- a/css/common.css
+++ b/css/common.css
@@ -210,9 +210,6 @@ header ol li a h5 .active .header_nav_link .header_nav_text:after {
     opacity: 0;
   }
 }
-.full-wrap {
-  width: 50%;
-}
 .full-wrap .article-box.pf-main {
   width: 100%;
   height: 100%;
@@ -220,18 +217,85 @@ header ol li a h5 .active .header_nav_link .header_nav_text:after {
   align-items: center;
   justify-content: center;
 }
+.full-wrap .article-box.pf-intro {
+  width: 80%;
+  margin: 0 auto;
+  padding: 0 0 15rem 0;
+}
+.full-wrap .article-box.pf-intro .main-intro-list {
+  display: flex;
+}
+.full-wrap .article-box.pf-intro .main-intro-list .main-intro-item {
+  flex: 1;
+}
+.full-wrap .article-box.pf-intro .main-intro-list .main-intro-item:hover .main-intro-title {
+  color: #000;
+}
+.full-wrap .article-box.pf-intro .main-intro-list .main-intro-item .main-intro-sub-list {
+  margin-top: 0.8rem;
+  font-style: oblique;
+  color: #464646;
+}
+.full-wrap .article-box.pf-intro .main-intro-list .main-intro-item .main-intro-sub-list .main-intro-sub-item {
+  font-size: 1.1rem;
+}
+.full-wrap .article-box.pf-intro .main-intro-list .main-intro-item .main-intro-title {
+  text-transform: uppercase;
+  font-size: 2.5rem;
+  display: block;
+  font-weight: bold;
+  color: #fff;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+  transition: all 0.2s;
+}
 .full-wrap .article-box.pf-aboutme {
-  margin-bottom: 5rem !important;
+  width: 80%;
+  margin: 0 auto;
+  padding: 0 0 15rem 0;
 }
 .full-wrap .article-box.pf-aboutme .aboutme-wrap {
+  width: 80%;
   display: flex;
   align-items: flex-start;
+  margin: 0 auto;
+  justify-content: space-between;
 }
 .full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-text {
   width: 70%;
-  margin-right: 2rem;
-  color: #ccd6f6;
   font-size: 1.5rem;
+}
+.full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-text .info .skill-text,
+.full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-text .skills .skill-text,
+.full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-text .license .skill-text,
+.full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-text .education .skill-text {
+  font-size: 1.2rem;
+}
+.full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-text .info .get-date,
+.full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-text .skills .get-date,
+.full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-text .license .get-date,
+.full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-text .education .get-date {
+  font-size: 1.2rem;
+  color: rgb(159, 98, 98);
+}
+.full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-text .info .get-name,
+.full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-text .skills .get-name,
+.full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-text .license .get-name,
+.full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-text .education .get-name {
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin: 0.2rem 0 0.5rem 1rem;
+  display: inline-block;
+}
+.full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-text .tag {
+  border: 1px solid;
+  background-color: rgba(0, 128, 0, 0.6);
+  color: #fff;
+  font-size: 1.2rem;
+  margin-right: 1rem;
+  width: 7rem;
+  text-align: center;
+  margin-bottom: 0.5rem;
+  margin-top: 0.5rem;
 }
 .full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-profile {
   width: 30%;
@@ -240,14 +304,18 @@ header ol li a h5 .active .header_nav_link .header_nav_text:after {
   width: 100%;
 }
 .full-wrap .article-box.pf-exprience {
-  margin-bottom: 5rem !important;
-  padding-bottom: 5rem;
+  width: 80%;
+  margin: 0 auto;
+  padding: 0 0 15rem 0;
+}
+.full-wrap .article-box.pf-exprience .exprience-wrap {
+  width: 80%;
+  margin: 0 auto;
 }
 .full-wrap .article-box.pf-exprience .exprience-list {
   margin-bottom: 2rem;
 }
 .full-wrap .article-box.pf-exprience .exprience-list .list-nav {
-  color: #ccd6f6;
   font-size: 1.2rem;
 }
 .full-wrap .article-box.pf-exprience .exprience-list .list-nav ul {
@@ -262,9 +330,6 @@ header ol li a h5 .active .header_nav_link .header_nav_text:after {
 .full-wrap .article-box.pf-exprience .exprience-list .list-nav ul li.active {
   background-color: rgba(205, 208, 213, 0.12);
   box-shadow: inset 0 -2px 0px 0px;
-}
-.full-wrap .article-box.pf-exprience .exprience-detail {
-  color: #ccd6f6;
 }
 .full-wrap .article-box.pf-exprience .exprience-detail .company-name {
   font-size: 1.5rem;
@@ -284,13 +349,8 @@ header ol li a h5 .active .header_nav_link .header_nav_text:after {
   font-size: 1rem;
   transition: 0.4s;
 }
-.full-wrap .article-box.pf-exprience .exprience-detail .active,
-.full-wrap .article-box.pf-exprience .exprience-detail .accordion:hover {
-  color: #fff;
-}
 .full-wrap .article-box.pf-exprience .exprience-detail .accordion:before {
   content: "+";
-  color: #ccd6f6;
 }
 .full-wrap .article-box.pf-exprience .exprience-detail .active:before {
   content: "−";
@@ -306,12 +366,13 @@ header ol li a h5 .active .header_nav_link .header_nav_text:after {
   padding: 0.5rem 0;
 }
 .full-wrap .article-box .article-title {
-  color: #c4cae0;
+  color: #fff;
   margin-bottom: 3rem !important;
   font-weight: bold;
+  font-size: 8rem;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 .full-wrap .article-box .article-title span {
-  color: #60f6d3;
   font-size: 2rem;
   font-weight: normal;
 }/*# sourceMappingURL=common.css.map */
