--- a/css/common.scss
+++ b/css/common.scss
@@ -139,7 +139,7 @@ header {
 }
 
 .full-wrap {
-    width: 50%;
+    // width: 50%;
 
     .article-box {
         &.pf-main {
@@ -150,18 +150,112 @@ header {
             justify-content: center;
         }
 
+        &.pf-intro {
+            width: 80%;
+            margin: 0 auto;
+            padding: 0 0 15rem 0;
+
+            .main-intro-list {
+                display: flex;
+
+                .main-intro-item {
+                    flex: 1;
+
+                    &:hover {
+                    //    .main-intro-number {
+                    //         color: #000;
+                    //     }
+                        .main-intro-title {
+                            color: #000;
+                        }
+                    }
+
+                    // .main-intro-title {
+                    //     text-transform: uppercase;
+                    //     font-size: 1.5rem;
+                    // }
+
+                    .main-intro-sub-list {
+                        margin-top: 0.8rem;
+                        font-style: oblique;
+                        color: #464646;
+
+                        .main-intro-sub-item {
+                            font-size: 1.1rem;
+                        }
+                    }
+
+                    // .main-intro-number,
+                    .main-intro-title {
+                        text-transform: uppercase;
+                        font-size: 2.5rem;
+                        display: block;
+                        // font-size: 4.5rem;
+                        font-weight: bold;
+                        color: #fff;
+                        text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+                        transition: all .2s;
+                    }
+                }
+
+            }
+        }
+
         &.pf-aboutme {
-            margin-bottom: 5rem !important;
+            width: 80%;
+            margin: 0 auto;
+            padding: 0 0 15rem 0;
 
             .aboutme-wrap {
+                width: 80%;
                 display: flex;
                 align-items: flex-start;
+                margin: 0 auto;
+                justify-content: space-between;
 
                 .aboutme-text {
                     width: 70%;
-                    margin-right: 2rem;
-                    color: #ccd6f6;
+                    // margin-right: 2rem;
+                    // color: #ccd6f6;
                     font-size: 1.5rem;
+
+                    .info,
+                    .skills,
+                    .license,
+                    .education {
+                        // display: flex;
+                        // align-items: center;
+                        // height: 2.5rem;
+
+                        .skill-text {
+                            font-size: 1.2rem;
+                        }
+
+                        .get-date {
+                            font-size: 1.2rem;
+                            color: rgb(159 98 98);
+                        }
+
+                        .get-name {
+                            font-size: 1.2rem;
+                            font-weight: bold;
+                            margin: 0.2rem 0 0.5rem 1rem;
+                            display: inline-block;
+                        }
+                    }
+
+                    .tag {
+                        // display: inline-block;
+                        border: 1px solid;
+                        background-color: rgb(0 128 0 / 60%);
+                        color: #fff;
+                        font-size: 1.2rem;
+                        margin-right: 1rem;
+                        width: 7rem;
+                        text-align: center;
+                        margin-bottom: 0.5rem;
+                        margin-top: 0.5rem;
+                    }
                 }
 
                 .aboutme-profile {
@@ -175,14 +269,22 @@ header {
         }
 
         &.pf-exprience {
-            margin-bottom: 5rem !important;
-            padding-bottom: 5rem;
+            width: 80%;
+            margin: 0 auto;
+            padding: 0 0 15rem 0;
+            // margin-bottom: 5rem !important;
+            // padding-bottom: 5rem;
+
+            .exprience-wrap {
+                width: 80%;
+                margin: 0 auto;
+            }
 
             .exprience-list {
                 margin-bottom: 2rem;
 
                 .list-nav {
-                    color: #ccd6f6;
+                    // color: #ccd6f6;
                     font-size: 1.2rem;
 
                     ul {
@@ -204,7 +306,7 @@ header {
             }
 
             .exprience-detail {
-                color: #ccd6f6;
+                // color: #ccd6f6;
 
                 .company-name {
                     font-size: 1.5rem;
@@ -235,13 +337,13 @@ header {
                 
                 .active,
                 .accordion:hover {
-                    color: #fff;
+                    // color: #fff;
                     // font-weight: bold;
                 }
                 
                 .accordion:before {
                     content: '\002B';
-                    color: #ccd6f6;
+                    // color: #ccd6f6;
                 }
                 
                 .active:before {
@@ -264,12 +366,14 @@ header {
         }
 
         .article-title {
-            color: #c4cae0;
+            color: #fff;
             margin-bottom: 3rem !important;
             font-weight: bold;
+            font-size: 8rem;
+            text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 
             span {
-                color: #60f6d3;
+                // color: #60f6d3;
                 font-size: 2rem;
                 font-weight: normal;
             }
