--- a/css/common.css
+++ b/css/common.css
@@ -103,6 +103,13 @@ header ol li a h5 .active .header_nav_link .header_nav_text:after {
   display: none !important;
 }
 
+.verticle-line {
+  border: 0;
+  border-right: 1px solid rgba(0, 0, 0, 0.1);
+  width: 1px;
+  margin: 0 2rem;
+}
+
 .fs-10 {
   font-size: 10px !important;
 }
@@ -264,11 +271,28 @@ header ol li a h5 .active .header_nav_link .header_nav_text:after {
   width: 70%;
   font-size: 1.5rem;
 }
-.full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-text .info .skill-text,
-.full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-text .skills .skill-text,
-.full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-text .license .skill-text,
-.full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-text .education .skill-text {
-  font-size: 1.2rem;
+.full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-text .info .skills-wrap .skill-elem,
+.full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-text .skills .skills-wrap .skill-elem,
+.full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-text .license .skills-wrap .skill-elem,
+.full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-text .education .skills-wrap .skill-elem {
+  margin-right: 1.5rem;
+  text-align: center;
+}
+.full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-text .info .skills-wrap .skill-elem img,
+.full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-text .skills .skills-wrap .skill-elem img,
+.full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-text .license .skills-wrap .skill-elem img,
+.full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-text .education .skills-wrap .skill-elem img {
+  height: 50px;
+  margin-bottom: 0.5rem;
+}
+.full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-text .info .skills-wrap .skill-elem:hover,
+.full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-text .skills .skills-wrap .skill-elem:hover,
+.full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-text .license .skills-wrap .skill-elem:hover,
+.full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-text .education .skills-wrap .skill-elem:hover {
+  filter: drop-shadow(5px 5px 5px #000);
+  transition: 0.2s;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+  color: white;
 }
 .full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-text .info .get-date,
 .full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-text .skills .get-date,
@@ -276,6 +300,7 @@ header ol li a h5 .active .header_nav_link .header_nav_text:after {
 .full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-text .education .get-date {
   font-size: 1.2rem;
   color: rgb(159, 98, 98);
+  display: inline-block;
 }
 .full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-text .info .get-name,
 .full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-text .skills .get-name,
@@ -284,7 +309,7 @@ header ol li a h5 .active .header_nav_link .header_nav_text:after {
   font-size: 1.2rem;
   font-weight: bold;
   margin: 0.2rem 0 0.5rem 1rem;
-  display: inline-block;
+  display: block;
 }
 .full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-text .tag {
   border: 1px solid;
@@ -366,6 +391,7 @@ header ol li a h5 .active .header_nav_link .header_nav_text:after {
   padding: 0.5rem 0;
 }
 .full-wrap .article-box .article-title {
+  transition: all 0.4s;
   color: #fff;
   margin-bottom: 3rem !important;
   font-weight: bold;
@@ -375,4 +401,8 @@ header ol li a h5 .active .header_nav_link .header_nav_text:after {
 .full-wrap .article-box .article-title span {
   font-size: 2rem;
   font-weight: normal;
+}
+.full-wrap .article-box .article-title:hover {
+  color: #000;
+  transition: all 0.4s;
 }/*# sourceMappingURL=common.css.map */
