--- a/css/common.css
+++ b/css/common.css
@@ -43,6 +43,10 @@ a {
   color: inherit !important;
 }
 
+hr {
+  margin: 2.5rem 0;
+}
+
 ol,
 ul,
 li {
@@ -65,33 +69,21 @@ header {
 header .logo-link {
   font-size: 2.5rem;
 }
-header ol li {
+header ol .nav-item {
   margin-right: 2rem;
 }
-header ol li a {
+header ol .nav-item a {
   display: flex;
   flex-flow: column;
   color: #60f6d3;
 }
-header ol li a span {
+header ol .nav-item a .num {
   font-weight: lighter;
 }
-header ol li a h5 {
+header ol .nav-item a .nav-text {
+  position: relative;
+  font-size: 1.2rem;
   font-weight: 400;
-}
-header ol li a h5:after {
-  position: absolute;
-  left: 0;
-  bottom: -2px;
-  display: block;
-  width: 0;
-  height: 1px;
-  background-color: #000;
-  transition: width 0.4s;
-  content: "";
-}
-header ol li a h5 .active .header_nav_link .header_nav_text:after {
-  width: 100%;
 }
 
 #wrap {
@@ -227,7 +219,7 @@ header ol li a h5 .active .header_nav_link .header_nav_text:after {
 .full-wrap .article-box.pf-intro {
   width: 80%;
   margin: 0 auto;
-  padding: 0 0 15rem 0;
+  padding: 0 0 10rem 0;
 }
 .full-wrap .article-box.pf-intro .main-intro-list {
   display: flex;
@@ -236,6 +228,7 @@ header ol li a h5 .active .header_nav_link .header_nav_text:after {
   flex: 1;
 }
 .full-wrap .article-box.pf-intro .main-intro-list .main-intro-item:hover .main-intro-title {
+  text-shadow: 3px 3px 7px #000;
   color: #000;
 }
 .full-wrap .article-box.pf-intro .main-intro-list .main-intro-item .main-intro-sub-list {
@@ -258,7 +251,7 @@ header ol li a h5 .active .header_nav_link .header_nav_text:after {
 .full-wrap .article-box.pf-aboutme {
   width: 80%;
   margin: 0 auto;
-  padding: 0 0 15rem 0;
+  padding: 6rem 0 10rem 0;
 }
 .full-wrap .article-box.pf-aboutme .aboutme-wrap {
   width: 80%;
@@ -266,6 +259,23 @@ header ol li a h5 .active .header_nav_link .header_nav_text:after {
   align-items: flex-start;
   margin: 0 auto;
   justify-content: space-between;
+}
+.full-wrap .article-box.pf-aboutme .aboutme-wrap .mobile-photo .photo-back {
+  position: absolute;
+  top: 0;
+  width: 270px;
+  border: 1px solid #000;
+  height: 350px;
+  box-shadow: 2px 2px 9px;
+  transform: rotate(5deg);
+  z-index: 9;
+  opacity: 0.5;
+}
+.full-wrap .article-box.pf-aboutme .aboutme-wrap .mobile-photo .id-photo {
+  position: relative;
+  width: 100%;
+  z-index: 10;
+  box-shadow: 2px 2px 9px;
 }
 .full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-text {
   width: 70%;
@@ -312,15 +322,15 @@ header ol li a h5 .active .header_nav_link .header_nav_text:after {
   display: block;
 }
 .full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-text .tag {
-  border: 1px solid;
-  background-color: rgba(0, 128, 0, 0.6);
-  color: #fff;
+  border: 1px solid #8f8f8f;
+  color: #000;
   font-size: 1.2rem;
   margin-right: 1rem;
   width: 7rem;
   text-align: center;
-  margin-bottom: 0.5rem;
+  margin-bottom: 1rem;
   margin-top: 0.5rem;
+  box-shadow: 2px 2px 7px -3px;
 }
 .full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-profile {
   width: 30%;
@@ -331,7 +341,10 @@ header ol li a h5 .active .header_nav_link .header_nav_text:after {
 .full-wrap .article-box.pf-exprience {
   width: 80%;
   margin: 0 auto;
-  padding: 0 0 15rem 0;
+  padding: 7rem 0 10rem 0;
+}
+.full-wrap .article-box.pf-exprience .exp-title {
+  line-height: 7rem;
 }
 .full-wrap .article-box.pf-exprience .exprience-wrap {
   width: 80%;
@@ -405,4 +418,5 @@ header ol li a h5 .active .header_nav_link .header_nav_text:after {
 .full-wrap .article-box .article-title:hover {
   color: #000;
   transition: all 0.4s;
+  text-shadow: 3px 3px 7px #000;
 }/*# sourceMappingURL=common.css.map */
