--- a/css/common.scss
+++ b/css/common.scss
@@ -21,6 +21,10 @@ a {
     color: inherit!important;
 }
 
+hr {
+    margin: 2.5rem 0;
+}
+
 ol,
 ul,
 li {
@@ -45,38 +49,22 @@ header {
     }
 
     ol {
-        li {
+        .nav-item {
             margin-right: 2rem;
-            
+
             a {
                 display: flex;
                 flex-flow: column;
                 color: #60f6d3;
-                // padding: 0 1rem;
 
-                span {
-                    // margin-right: 0.5rem;
+                .num {
                     font-weight: lighter;
                 }
 
-                h5 {
+                .nav-text {
+                    position: relative;
+                    font-size: 1.2rem;
                     font-weight: 400;
-
-                    &:after {
-                        position: absolute;
-                        left: 0;
-                        bottom: -2px;
-                        display: block;
-                        width: 0;
-                        height: 1px;
-                        background-color: #000;
-                        transition: width .4s;
-                        content: "";
-                    }
-
-                    .active .header_nav_link .header_nav_text:after {
-                        width: 100%;
-                    }
                 }
             }
         }
@@ -160,7 +148,7 @@ header {
         &.pf-intro {
             width: 80%;
             margin: 0 auto;
-            padding: 0 0 15rem 0;
+            padding: 0 0 10rem 0;
 
             .main-intro-list {
                 display: flex;
@@ -173,6 +161,7 @@ header {
                     //         color: #000;
                     //     }
                         .main-intro-title {
+                            text-shadow: 3px 3px 7px #000;
                             color: #000;
                         }
                     }
@@ -211,7 +200,7 @@ header {
         &.pf-aboutme {
             width: 80%;
             margin: 0 auto;
-            padding: 0 0 15rem 0;
+            padding: 6rem 0 10rem 0;
 
             .aboutme-wrap {
                 width: 80%;
@@ -219,6 +208,27 @@ header {
                 align-items: flex-start;
                 margin: 0 auto;
                 justify-content: space-between;
+
+                .mobile-photo {
+                        .photo-back {
+                            position: absolute;
+                            top: 0;
+                            width: 270px;
+                            border: 1px solid #000;
+                            height: 350px;
+                            box-shadow: 2px 2px 9px;
+                            transform: rotate(5deg);
+                            z-index: 9;
+                            opacity: 0.5;
+                        }
+
+                        .id-photo {
+                            position: relative;
+                            width: 100%;
+                            z-index: 10;
+                            box-shadow: 2px 2px 9px;
+                        }
+                    }
 
                 .aboutme-text {
                     width: 70%;
@@ -269,15 +279,16 @@ header {
 
                     .tag {
                         // display: inline-block;
-                        border: 1px solid;
-                        background-color: rgb(0 128 0 / 60%);
-                        color: #fff;
+                        border: 1px solid #8f8f8f;
+                        // background-color: rgb(0 128 0 / 60%);
+                        color: #000;
                         font-size: 1.2rem;
                         margin-right: 1rem;
                         width: 7rem;
                         text-align: center;
-                        margin-bottom: 0.5rem;
+                        margin-bottom: 1rem;
                         margin-top: 0.5rem;
+                        box-shadow: 2px 2px 7px -3px;
                     }
                 }
 
@@ -294,9 +305,11 @@ header {
         &.pf-exprience {
             width: 80%;
             margin: 0 auto;
-            padding: 0 0 15rem 0;
-            // margin-bottom: 5rem !important;
-            // padding-bottom: 5rem;
+            padding: 7rem 0 10rem 0;
+
+            .exp-title {
+                line-height: 7rem;
+            }
 
             .exprience-wrap {
                 width: 80%;
@@ -390,7 +403,6 @@ header {
 
         .article-title {
             transition: all .4s;
-
             color: #fff;
             margin-bottom: 3rem !important;
             font-weight: bold;
@@ -406,6 +418,7 @@ header {
             &:hover {
                 color: #000;
                 transition: all .4s;
+                text-shadow: 3px 3px 7px #000;
             }
         }
     }
