--- a/css/common.css
+++ b/css/common.css
@@ -369,20 +369,40 @@ header ol .nav-item a .nav-text {
   background-color: rgba(205, 208, 213, 0.12);
   box-shadow: inset 0 -2px 0px 0px;
 }
-.full-wrap .article-box.pf-exprience .exprience-detail .company-name {
-  font-size: 1.5rem;
-  font-weight: bold;
-  margin-bottom: 0.5rem;
-}
-.full-wrap .article-box.pf-exprience .exprience-detail .company-date {
-  font-size: 1.1rem;
-  margin-bottom: 0.5rem;
-}
-.full-wrap .article-box.pf-exprience .exprience-detail .company-detail {
+.full-wrap .article-box.pf-exprience .exprience-detail {
   margin-bottom: 2rem;
 }
+.full-wrap .article-box.pf-exprience .exprience-detail .company-date {
+  margin-bottom: 0.5rem;
+}
+.full-wrap .article-box.pf-exprience .exprience-detail .company-date .date {
+  font-size: 1.5rem;
+  font-weight: 100;
+  color: #b34831;
+}
+.full-wrap .article-box.pf-exprience .exprience-detail .company-info {
+  display: flex;
+  align-items: flex-end;
+  margin-bottom: 0.3rem;
+}
+.full-wrap .article-box.pf-exprience .exprience-detail .company-info .company-name {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-right: 0.5rem;
+}
+.full-wrap .article-box.pf-exprience .exprience-detail .company-info .company-detail {
+  font-size: 1rem;
+}
+.full-wrap .article-box.pf-exprience .exprience-detail .company-descript {
+  font-size: 1.1rem;
+  color: gray;
+  margin-bottom: 0.3rem;
+}
+.full-wrap .article-box.pf-exprience .exprience-detail .skills-tools {
+  font-size: 1.1rem;
+}
 .full-wrap .article-box.pf-exprience .exprience-detail .accordion {
-  margin: 1.3rem 0;
+  margin: 1rem 0 1.3rem 0;
   width: 100%;
   font-size: 1rem;
   transition: 0.4s;
@@ -395,12 +415,9 @@ header ol .nav-item a .nav-text {
 }
 .full-wrap .article-box.pf-exprience .exprience-detail .panel {
   padding: 0 1rem;
-  background-color: rgba(255, 0, 88, 0.11);
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.2s ease-out;
-  border-radius: 5px;
-  box-shadow: 2px 2px 7px -1px;
 }
 .full-wrap .article-box.pf-exprience .exprience-detail .panel div {
   padding: 0.5rem 0;
@@ -408,7 +425,7 @@ header ol .nav-item a .nav-text {
 .full-wrap .article-box .article-title {
   transition: all 0.4s;
   color: #fff;
-  margin-bottom: 3rem !important;
+  margin-bottom: 4rem !important;
   font-weight: bold;
   font-size: 8rem;
   text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
