--- a/css/common.scss
+++ b/css/common.scss
@@ -344,20 +344,42 @@ header {
 
             .exprience-detail {
                 // color: #ccd6f6;
-
-                .company-name {
-                    font-size: 1.5rem;
-                    font-weight: bold;
-                    margin-bottom: 0.5rem;
-                }
+                margin-bottom: 2rem;
 
                 .company-date {
-                    font-size: 1.1rem;
                     margin-bottom: 0.5rem;
+
+                    .date {
+                        font-size: 1.5rem;
+                        font-weight: 100;
+                        color: #b34831;
+                    }
                 }
 
-                .company-detail {
-                    margin-bottom: 2rem;
+                .company-info {
+                    display: flex;
+                    align-items: flex-end;
+                    margin-bottom: 0.3rem;
+
+                    .company-name {
+                        font-size: 1.5rem;
+                        font-weight: bold;
+                        margin-right: 0.5rem;
+                    }
+                    
+                    .company-detail {
+                        font-size: 1rem;
+                    }
+                }
+
+                .company-descript {
+                    font-size: 1.1rem;
+                    color: gray;
+                    margin-bottom: 0.3rem;
+                }
+
+                .skills-tools {
+                    font-size: 1.1rem;
                 }
 
                 // .project-list {
@@ -368,7 +390,7 @@ header {
 
                 // 아코디언
                 .accordion {
-                    margin: 1.3rem 0;
+                    margin: 1rem 0 1.3rem 0;
                     width: 100%;
                     font-size: 1rem;
                     transition: 0.4s;
@@ -391,14 +413,14 @@ header {
 
                 .panel {
                     padding: 0 1rem;
-                    background-color: rgb(255 0 88 / 11%);
+                    // background-color: rgb(255 0 88 / 11%);
                     max-height: 0;
                     overflow: hidden;
                     transition: max-height 0.2s ease-out;
                     
                     // border: 1px solid;
-                    border-radius: 5px;
-                    box-shadow: 2px 2px 7px -1px;
+                    // border-radius: 5px;
+                    // box-shadow: 2px 2px 7px -1px;
 
                     div {
                         padding: 0.5rem 0;
@@ -412,7 +434,7 @@ header {
         .article-title {
             transition: all .4s;
             color: #fff;
-            margin-bottom: 3rem !important;
+            margin-bottom: 4rem !important;
             font-weight: bold;
             font-size: 8rem;
             text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
