--- a/css/common.css
+++ b/css/common.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Black+And+White+Picture&family=Black+Han+Sans&family=Do+Hyeon&family=Dongle&family=Gothic+A1&family=Gowun+Dodum&family=IBM+Plex+Sans+KR&family=Jua&family=Nanum+Gothic&family=Noto+Sans+KR&family=Stylish&family=Sunflower:wght@500&display=swap");
 html,
 body {
   width: 100%;
@@ -6,6 +7,7 @@ body {
   margin: 0;
   padding: 0;
   font-size: 14px;
+  font-family: "Jua", sans-serif;
 }
 
 h1 {
@@ -89,6 +91,11 @@ header ol .nav-item a .nav-text {
 #wrap {
   width: 100%;
   height: 100%;
+  background-image: url("../image/back.jpg");
+  /* overflow: hidden; */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .hidden {
@@ -215,11 +222,12 @@ header ol .nav-item a .nav-text {
   display: flex;
   align-items: center;
   justify-content: center;
+  color: white;
 }
 .full-wrap .article-box.pf-intro {
   width: 70%;
   margin: 0 auto;
-  padding: 0 0 10rem 0;
+  padding: 10rem 0;
 }
 .full-wrap .article-box.pf-intro .main-intro-list {
   display: flex;
@@ -228,8 +236,10 @@ header ol .nav-item a .nav-text {
   flex: 1;
 }
 .full-wrap .article-box.pf-intro .main-intro-list .main-intro-item:hover .main-intro-title {
-  text-shadow: 3px 3px 7px #000;
   color: #000;
+}
+.full-wrap .article-box.pf-intro .main-intro-list .main-intro-item:hover .main-intro-number {
+  color: #fff;
 }
 .full-wrap .article-box.pf-intro .main-intro-list .main-intro-item .main-intro-sub-list {
   margin-top: 0.8rem;
@@ -238,6 +248,16 @@ header ol .nav-item a .nav-text {
 }
 .full-wrap .article-box.pf-intro .main-intro-list .main-intro-item .main-intro-sub-list .main-intro-sub-item {
   font-size: 1.1rem;
+}
+.full-wrap .article-box.pf-intro .main-intro-list .main-intro-item .main-intro-number {
+  font-size: 4.5rem;
+  font-weight: bold;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+  position: absolute;
+  top: -45px;
+  left: -35px;
+  z-index: -10;
+  transition: all 0.2s;
 }
 .full-wrap .article-box.pf-intro .main-intro-list .main-intro-item .main-intro-title {
   text-transform: uppercase;
@@ -323,6 +343,7 @@ header ol .nav-item a .nav-text {
 }
 .full-wrap .article-box.pf-aboutme .aboutme-wrap .aboutme-text .tag {
   border: 1px solid #8f8f8f;
+  border-radius: 5px;
   color: #000;
   font-size: 1.2rem;
   margin-right: 1rem;
@@ -371,6 +392,8 @@ header ol .nav-item a .nav-text {
 }
 .full-wrap .article-box.pf-exprience .exprience-detail {
   margin-bottom: 2rem;
+  border-left: 5px solid green;
+  padding-left: 1rem;
 }
 .full-wrap .article-box.pf-exprience .exprience-detail .company-date {
   margin-bottom: 0.5rem;
@@ -400,12 +423,35 @@ header ol .nav-item a .nav-text {
 }
 .full-wrap .article-box.pf-exprience .exprience-detail .skills-tools {
   font-size: 1.1rem;
+  margin-bottom: 0.3rem;
+}
+.full-wrap .article-box.pf-exprience .exprience-detail .project-list .project-name {
+  font-size: 1.3rem;
+}
+.full-wrap .article-box.pf-exprience .exprience-detail .project-list .project-link {
+  margin-left: 0.3rem;
+  font-size: 1rem;
+  color: white !important;
+  border-radius: 5px;
+  padding: 0 0.2rem;
+}
+.full-wrap .article-box.pf-exprience .exprience-detail .project-list .project-link.user-link {
+  background-color: rgba(0, 128, 0, 0.6);
+}
+.full-wrap .article-box.pf-exprience .exprience-detail .project-list .project-link.admin-link {
+  background-color: rgba(255, 0, 0, 0.6);
 }
 .full-wrap .article-box.pf-exprience .exprience-detail .accordion {
+  display: inline;
   margin: 1rem 0 1.3rem 0;
   width: 100%;
   font-size: 1rem;
-  transition: 0.4s;
+  transition: 0.2s;
+}
+.full-wrap .article-box.pf-exprience .exprience-detail .active,
+.full-wrap .article-box.pf-exprience .exprience-detail .accordion:hover {
+  color: black;
+  font-weight: bold;
 }
 .full-wrap .article-box.pf-exprience .exprience-detail .accordion:before {
   content: "+";
@@ -420,7 +466,7 @@ header ol .nav-item a .nav-text {
   transition: max-height 0.2s ease-out;
 }
 .full-wrap .article-box.pf-exprience .exprience-detail .panel div {
-  padding: 0.5rem 0;
+  padding: 0.2rem 0;
 }
 .full-wrap .article-box .article-title {
   transition: all 0.4s;
