--- a/css/common.css
+++ b/css/common.css
@@ -1665,6 +1665,9 @@ li {
   .full-wrap .article-box.pf-exprience .exp-title {
     line-height: 5rem;
   }
+  .full-wrap .article-box.pf-exprience .exp-title .project-title {
+    margin-left: 0 !important;
+  }
   .full-wrap .article-box.pf-exprience .exprience-wrap {
     width: 100%;
     margin: 0 auto;
@@ -1771,7 +1774,7 @@ li {
     color: #fff;
     margin-bottom: 4rem !important;
     font-weight: bold;
-    font-size: 6rem;
+    font-size: 5rem;
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
   }
   .full-wrap .article-box .article-title span {
