--- a/css/common.css
+++ b/css/common.css
@@ -1363,16 +1363,19 @@ li {
   header .logo-link {
     font-size: 2.5rem;
   }
-  header ol .nav-item {
+  header nav {
+    display: none;
+  }
+  header nav ol .nav-item {
     margin-right: 2rem;
   }
-  header ol .nav-item.active::after {
+  header nav ol .nav-item.active::after {
     width: 100%;
   }
-  header ol .nav-item:hover::after {
+  header nav ol .nav-item:hover::after {
     width: 100%;
   }
-  header ol .nav-item::after {
+  header nav ol .nav-item::after {
     position: absolute;
     left: 0;
     bottom: -2px;
@@ -1383,15 +1386,15 @@ li {
     transition: width 0.4s;
     content: "";
   }
-  header ol .nav-item a {
+  header nav ol .nav-item a {
     display: flex;
     flex-flow: column;
     color: #60f6d3;
   }
-  header ol .nav-item a .num {
+  header nav ol .nav-item a .num {
     font-weight: lighter;
   }
-  header ol .nav-item a .nav-text {
+  header nav ol .nav-item a .nav-text {
     position: relative;
     font-size: 1.2rem;
     font-weight: 400;
