--- a/css/utils.css
+++ b/css/utils.css
@@ -2,5 +2,4 @@
 /*반응형 화면 크기*/
 /*767px 이하*/
 /*768이상, 1023px 이하*/
-/*1024px 이상, 1680 이하*/
-/*1680 이상*//*# sourceMappingURL=utils.css.map */
+/*1024px 이상, 1680 이하*//*# sourceMappingURL=utils.css.map */
