--- a/css/common.scss
+++ b/css/common.scss
@@ -193,7 +193,7 @@ header {
             width: 100%;
             height: 100%;
             z-index: 10;
-            background: url('../image/back5.jpg') #c0c0c0 center fixed no-repeat;
+            background: url('../image/back5.jpg') #c0c0c0 top center fixed no-repeat;
             background-size: cover;
             display: block;
             // box-shadow: inset 0px 0px 50px 0px grey;
